Fixing move mode icons not showing up and emphasis text spacing

--- a/src/main.scss
+++ b/src/main.scss
@@ -86,18 +86,22 @@ body {
 }
 
 .text-bold {
+    margin-left: 5px;
     font-weight: bold;
 }
 
 .text-italic {
+    margin-left: 5px;
     font-style: italic;
 }
 
 .text-underline {
+    margin-left: 5px;
     text-decoration: underline;
 }
 
 .text-strikethrough {
+    margin-left: 5px;
     text-decoration: line-through;
 }
 
